gitlab-ci: add OSX 13 to testing
Restored OSX 13 testing to pass homebrew commit criteria.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -213,6 +213,11 @@ release_asan_clang8:
   script:
     - ${GITLAB_MAKE} test_asan_debian_no_deps
 
+osx_13_release:
+  tags:
+    - osx_13
+  <<: *osx_definition
+
 osx_14_release:
   tags:
     - osx_14
