Add flaky tests checksums to fragile 2nd part
Added for tests with issues:

  box/gh-5135-invalid-upsert.test.lua		gh-5376
  box/huge_field_map_long.test.lua		gh-5375
  replication/election_basic.test.lua		gh-5368
  replication/show_error_on_disconnect.test.lua	gh-5371
  vinyl/gh-4957-too-many-upserts.test.lua	gh-5378
  vinyl/quota.test.lua				gh-5377
  vinyl/snapshot.test.lua			gh-4984
  vinyl/stat.test.lua				gh-4951

--- a/test/box/suite.ini
+++ b/test/box/suite.ini
@@ -99,6 +99,14 @@ fragile = {
         "gh-2763-session-credentials-update.test.lua": {
             "issues": [ "gh-5363" ],
             "checksums": [ "3caab61b50328a1b8bdaa0b2d857d95b" ]
+        },
+        "huge_field_map_long.test.lua": {
+            "issues": [ "gh-5375" ],
+            "checksums": [ "57e0451794c2b55625e5c0b2483d1b26" ]
+        },
+        "gh-5135-invalid-upsert.test.lua": {
+            "issues": [ "gh-5376" ],
+            "checksums": [ "5f0424778fda5bd30f48d707eebe1983" ]
         }
     }
   }
