--- a/test/replication/suite.ini
+++ b/test/replication/suite.ini
@@ -94,6 +94,14 @@ fragile = {
         "prune.test.lua": {
             "issues": [ "gh-5361" ],
             "checksums": [ "2dd52fed642b0132ccef3853ad96a807", "7efe2d7cb3a869a1ea5fb954f323d06d" ]
+        },
+        "election_basic.test.lua": {
+            "issues": [ "gh-5368" ],
+            "checksums": [ "9c27e4fbc1acfb49f3bd1ab05423bf72" ]
+        },
+        "show_error_on_disconnect.test.lua": {
+            "issues": [ "gh-5371" ],
+            "checksums": [ "304214225ce2a0238cc583059733f73a", "7bb4a0f8d3f82fa998462ea8120983fb" ]
         }
     }
   }
