--- a/test/vinyl/suite.ini
+++ b/test/vinyl/suite.ini
@@ -12,7 +12,7 @@ is_parallel = True
 # throttle.test.lua temporary disabled for gh-4168
 disabled = upgrade.test.lua throttle.test.lua
 pretest_clean = True
-fragile = {
+fragile1 = {
     "retries": 10,
     "tests": {
         "tx_gap_lock.test.lua": {
@@ -29,13 +29,15 @@ fragile = {
             "issues": [ "gh-4168" ]
         },
         "stat.test.lua": {
-            "issues": [ "gh-4951" ]
+            "issues": [ "gh-4951" ],
+            "checksums": [ "5db4cf9154310dc41303ff68fb413252" ]
         },
         "misc.test.lua": {
             "issues": [ "gh-4979" ]
         },
         "snapshot.test.lua": {
-            "issues": [ "gh-4984" ]
+            "issues": [ "gh-4984" ],
+            "checksums": [ "10783b2ecef8db6735719304f3d72b88" ]
         },
         "write_iterator.test.lua": {
             "issues": [ "gh-4572" ]
@@ -67,6 +69,14 @@ fragile = {
         "write_iterator_rand.test.lua": {
             "issues": [ "gh-5356" ],
             "checksums": [ "2dd52fed642b0132ccef3853ad96a807" ]
+        },
+        "quota.test.lua": {
+            "issues": [ "gh-5377" ],
+            "checksums": [ "6b023a67afd5e3df09a684eaac91dcaa" ]
+        },
+        "gh-4957-too-many-upserts.test.lua": {
+            "issues": [ "gh-5378" ],
+            "checksums": [ "56826ed479bf2ce7613fc56533c93c9a" ]
         }
     }
   }
